--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,131 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+
+
+
+.TestDiv{
+  width:100%;
+  height: 100vh;
+ box-sizing: border-box;
+ /* background: linear-gradient(150deg,#042222 15%,#0C6665 70%,#91C3C3 94%); */
+  }
+
+/* .shape-style-1{
+    background: linear-gradient(150deg,#042222 15%,#0C6665 70%,#91C3C3 94%);
+} */
+
+  
+.shape-style-1 span {
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    position: absolute;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.shape-style-1 .span-200 {
+    height: 200px;
+    width: 200px
 }
 
-.App-link {
-  color: #09d3ac;
+.shape-style-1 .span-150 {
+    height: 150px;
+    width: 150px
 }
+
+.shape-style-1 .span-100 {
+    height: 100px;
+    width: 100px
+}
+
+.shape-style-1 .span-75 {
+    height: 75px;
+    width: 75px
+}
+
+.shape-style-1 .span-50 {
+    height: 50px;
+    width: 50px
+}
+
+.shape-style-1 :first-child {
+    left: -4%;
+    bottom: auto;
+    background: hsla(0,0%,100%,.1)
+}
+
+.shape-style-1 :nth-child(2) {
+    right: 4%;
+    top: 20%;
+    background: hsla(0,0%,100%,.2)
+}
+
+.shape-style-1 :nth-child(3) {
+    top: 280px;
+    right: 5.66666%;
+    background: hsla(0,0%,100%,.15)
+}
+
+.shape-style-1 :nth-child(4) {
+    top: 45%;
+    right: 17%;
+    background: hsla(0,0%,100%,.1)
+}
+
+.shape-style-1 :nth-child(5) {
+    top: 38%;
+    left: 1%;
+    right: auto;
+    background: hsla(0,0%,100%,.15)
+}
+
+.shape-style-1 :nth-child(6) {
+    width: 200px;
+    height: 200px;
+    top: 44%;
+    left: 10%;
+    right: auto;
+    background: hsla(0,0%,100%,.1)
+}
+
+.shape-style-1 :nth-child(7) {
+    bottom: 50%;
+    right: 36%;
+    background: hsla(0,0%,100%,.1)
+}
+
+.shape-style-1 :nth-child(8) {
+    bottom: 70px;
+    right: 2%;
+    background: hsla(0,0%,100%,.2)
+}
+
+.shape-style-1 :nth-child(9) {
+    bottom: 1%;
+    right: 2%;
+    background: hsla(0,0%,100%,.15)
+}
+
+.shape-style-1 :nth-child(10) {
+    bottom: 1%;
+    left: 6%;
+    right: auto;
+    background: hsla(0,0%,100%,.25)
+}
+
+@media (max-width: 991.98px) {
+    .shape-style-1 span {
+        height:120px
+    }
+}
+
+@media (max-width: 767.98px) {
+    .shape-style-1 span {
+        height:90px
+    }
+}
+
+
+
+
