--- a/src/components/Animated/TypeWriter.css
+++ b/src/components/Animated/TypeWriter.css
@@ -12,8 +12,17 @@
   .text_4 {
     animation: text4;
   }
-  
-  
+  .typeWriter{
+    font-size: 2.2em 
+  }
+  @media screen and (max-width: 360px) {
+    .typeWriter{
+      font-size: 0.6em;
+    }
+    .text_1, .text_2 , .text_3, .text_4{
+      font-size: 0.3em;
+    }
+  }
   .text_1, .text_2 , .text_3, .text_4{
     overflow: hidden;
     white-space: nowrap;
