fix the Topheader

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
   margin:auto
 }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.green { color:#49aa9d  }
 
 
 /* #2c3f52 */
