--- a/src/views/pages/home/FixSection/Tab/Tab.css
+++ b/src/views/pages/home/FixSection/Tab/Tab.css
@@ -7,3 +7,12 @@
 .container {
     padding: 24px;
 }
+.NB{
+    background-color:#E7F7F6;
+    border: 1px solid #28384C;
+    font-family: Montserrat, sans-serif;
+    font-size: 1.1rem;
+    margin-top: 80px;
+    border-radius: 10px;
+
+}
