--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 .App {
   text-align: center;
   margin:auto;
@@ -14,6 +17,13 @@
   position: fixed;
   bottom: 10px;
   right: 10px;
+}
+.fb-root{
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width:50px;
+  height: 50px;
 }
 /*Primary color (green)*/
 /* #49aa9d */
