--- a/src/views/pages/home/FixSection/Tab/Tab.css
+++ b/src/views/pages/home/FixSection/Tab/Tab.css
@@ -2,6 +2,7 @@
     margin: auto;
     width: 85%;
     margin-top: 5rem;
+
 }
 
 .container {
@@ -19,3 +20,24 @@
     border-radius: 2px;
 
 }
+
+@media screen and (max-width: 992px) {
+    .root {
+        margin: auto;
+        width: 98%;
+        margin-top: 3rem;
+    
+    }
+    .container {
+        padding: 16px 0;
+    }
+    .NB{
+        font-size: .8rem;
+        margin-top: 1em;
+        text-align: left;
+        padding-left: 4px;
+        width:96%;
+        margin:auto;
+        box-sizing: border-box;
+    }
+  }
