--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ html {
 }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.green { color:#49aa9d  }
+.material-icons.purple { color:#4a4983}
 .MuiButton-iconSizeLarge > *:firsh_child { font-size: 36px; }
 .fab{
   position: fixed;
@@ -27,9 +28,10 @@ html {
 }
 /*Primary color (green)*/
 /* #49aa9d */
-/*Secondary color*/
+/*Primary Light color (light green)*/
 /*#28384C*/
-
+/*secondary color (purple)*/
+/*#4a4983*/
 
 
 
