--- a/src/views/pages/home/FixSection/Tab/Tab.css
+++ b/src/views/pages/home/FixSection/Tab/Tab.css
@@ -9,9 +9,8 @@
     padding: 16px;
 }
 .NB{
-    background-color:#FFC;
-    border: 1px solid #FFCC00;
-    border-left: 10px solid rgb(255, 208, 0);
+    background-color:#ffe56433;
+    border-left: 10px solid #ffe564;
 
     font-family: Montserrat, sans-serif;
     font-size: 1.1rem;
