--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html {
 .material-icons.green { color:#49aa9d  }
 .material-icons.purple { color:#4a4983}
 .MuiButton-iconSizeLarge > *:firsh_child { font-size: 36px; }
-.fab{
+/* .fab{
   position: fixed;
   bottom: 10px;
   right: 10px;
@@ -26,7 +26,9 @@ html {
   right: 10px;
   width:50px;
   height: 50px;
-}
+} */
+
+
 /*Primary color (green)*/
 /* #49aa9d */
 /*Primary Light color (light green)*/
