--- a/src/App.css
+++ b/src/App.css
@@ -3,31 +3,27 @@ html {
 }
 .App {
   text-align: center;
-  margin:auto;
+  margin: auto;
 }
-.AppContent{
-  max-width:1920px;
-  margin:auto;
-
+.AppContent {
+  max-width: 1920px;
+  margin: auto;
 }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-200 { font-size: 200px; }
-.material-icons.green { color:#49aa9d  }
-.material-icons.purple { color:#4a4983}
-.MuiButton-iconSizeLarge > *:firsh_child { font-size: 36px; }
-/* .fab{
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
+.material-icons.md-36 {
+  font-size: 36px;
 }
-.fb-root{
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  width:50px;
-  height: 50px;
-} */
-
+.material-icons.md-200 {
+  font-size: 200px;
+}
+.material-icons.green {
+  color: #49aa9d;
+}
+.material-icons.purple {
+  color: #4a4983;
+}
+.MuiButton-iconSizeLarge > *:firsh_child {
+  font-size: 36px;
+}
 
 /*Primary color (green)*/
 /* #49aa9d */
@@ -35,6 +31,3 @@ html {
 /*#28384C*/
 /*secondary color (purple)*/
 /*#4a4983*/
-
-
-
